Added .DS_Store to ignored
OSX attributes/meta-data files
added to ignored files list.

--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,9 @@ wheels/
 *.manifest
 *.spec
 
+# OSX attributes/meta-data files
+.DS_Store
+
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
